<resources>
    <string name="app_name">NoelUpload</string>
    <string name="errorFileManagerNotFound">Erreur, gestionnaire de fichier non trouvé, veuillez en installer un.</string>
    <string name="upload">Upload</string>
    <string name="fileIsInvalid">le fichier est invalide</string>
    <string name="errorFileIsInvalid">Erreur, le fichier est invalide.</string>
    <string name="errorInvalidLink">Erreur, le lien est invalide.</string>
    <string name="errorMessage">Erreur : %1$s.</string>
    <string name="linkCopied">Lien copié.</string>
    <string name="linksCopied">Liens copiés.</string>
    <string name="errorUploadAlreadyRunning">Erreur, un upload est déjà en cours.</string>
    <string name="imagePreview">Aperçu de l\'image</string>
    <string name="error">Erreur</string>
    <string name="fileToUploadNotFound">le fichier à upload n\'a pas été trouvé</string>
    <string name="delete">Supprimer</string>
    <string name="errorImageHasNotBeenUploaded">Erreur, l\'image n\'a pas été upload.</string>
    <string name="share">Partager</string>
    <string name="askConfirmation">Confirmer ?</string>
    <string name="reupload">Reupload</string>
</resources>
