<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="com.franckrj.noelupload.history.HistoryEntryMenuDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout_history_entry_menu_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagepreview_image_history_entry_menu_dialog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imagePreview"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> dialog.openDirectLinkInBrowser()}"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/infos_chip_history_entry_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/linkCopied"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/imagepreview_image_history_entry_menu_dialog"
            app:layout_constraintEnd_toEndOf="@+id/imagepreview_image_history_entry_menu_dialog"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/imagepreview_image_history_entry_menu_dialog" />

        <androidx.cardview.widget.CardView
            android:id="@+id/share_button_history_entry_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> dialog.shareDirectLinkOfHistoryEntry()}"
            app:cardBackgroundColor="@color/safeTransparent"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_button_history_entry_menu_dialog"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagepreview_image_history_entry_menu_dialog">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_share_white_36dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/delete_button_history_entry_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> dialog.deleteHistoryEntry()}"
            app:cardBackgroundColor="@color/safeTransparent"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/share_button_history_entry_menu_dialog"
            app:layout_constraintTop_toBottomOf="@+id/imagepreview_image_history_entry_menu_dialog">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:src="@drawable/ic_delete_white_36dp" />

                <TextView
                    android:id="@+id/delete_confirmation_text_history_entry_menu_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/askConfirmation"
                    android:textAllCaps="true"
                    android:textColor="@color/safeWhite"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
